Prepare to build android version 0.2

--- a/www/views/partials/filters.hbs
+++ b/www/views/partials/filters.hbs
@@ -1,4 +1,4 @@
-	<div class="filtros_wrapper">
+	<div class="filtros_wrapper" style="display: none;">
 		<div class="filtros overlay clearfix">
 			<div class="filtros_moneda clearfix">
 				<h3>MONEDA</h3>
