--- a/www/views/register-success.hbs
+++ b/www/views/register-success.hbs
@@ -3,10 +3,9 @@
 		<div class="content">
 			<div class="splash_logo">
 				<h3>{{header_title}}</h3>
-				<p>¡Gracias por registrarte en Pickwin, ahora puedes comenzar a jugar!</p>
-				<p>Hemos enviado a la dirección de correo electrónico con la que te registraste un mensaje con la información necesaria para activar tu cuenta.</p>
-				<p>Revisa tu bandeja de entrada y de spam, ¡Gracias!</p>
+				<p>Gracias por registrarte en Pickwin. <br> ¡Ahora puedes comenzar a jugar!</p>
+				<p>Inicia sesión para jugar tu primera quiniela.</p>
 			</div>
-			{{!-- <a href=""><img class="enviarcodigo" src="images/enviarcodigo.png"></a> --}}
+			<a class="green_button hook" data-resource="lobby" href="lobby.html">Ir al lobby</a>
 		</div>
 	</div>
