--- a/www/css/style.css
+++ b/www/css/style.css
@@ -108,16 +108,13 @@ body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!importa
 .registro .legales {width: 100%;}
 .registro .legales a.link_legal {font-size: 14px; color: #8A8A8D; display: inline-block; margin-bottom: 10%; text-decoration: none;}
 
-.registro .form .selectors {margin-top: 5%; margin-bottom: 10%;} 
+.registro .form .selectors { margin: 1rem 2rem 3rem;} 
 .registro .form .selector {width: 100%; text-align: left;}
 .registro .form .selector input {display: inline-block; float: left; width: 5%; height: 2%; margin-right: 3%;}
 .registro .form .selector label {font-size: 14px; color: #d8d8d8;  line-height: 30px;  width: 75%; margin: 0 auto 10% auto; display: inline block;}
 .registro .form .selector label a {font-size: 14px; color: #d8d8d8; }
 .registro .crearcuenta {width: 50%; margin-bottom: 10%;}
 .registro .form p {font-size: 12px; color: #8A8A8D;  line-height: 22px;  width: 100%; margin: 0 auto 2% auto;}
-
-.form input.submit_green{ background-color: #678946; border-color: #aaca7d; border-style: double; text-transform: uppercase; letter-spacing: 1.5px; font-size: 1.25rem; width: 240px;}
-form label.error{ color: #be8d2e; text-align: left; float: left; font-size: 1.1rem; letter-spacing: 1px; margin: 0 0 1rem 0;}
 
 /*** REGISTRO EXITOSO ***/
 
@@ -285,14 +282,26 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	}
 
 	.loading {
-		width: 36px;
-	    height: 36px;
+		width: 32px;
+	    height: 32px;
 	    position: relative;
 	    margin: 45vh auto;
 	    display: block;
 	    border-radius: 50%;
-	    border: 0.55rem solid rgb(70, 117, 39);
+	    border: 0.25rem solid rgb(70, 117, 39);
 	    border-top-color: white;
 	    -webkit-animation: spin 1s infinite linear;
 	    animation: spin 1s infinite linear;
 	}
+
+	/*John*/
+	.rootContainer{min-height: 100vh!important;}
+	.form input.submit_green{ background-color: #678946; border-color: #aaca7d; border-style: groove; text-transform: uppercase; letter-spacing: 1.5px; font-size: 1.25rem; width: 240px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
+	.green_button{ background-color: #678946; border-color: #aaca7d; border-style: groove; text-transform: uppercase; letter-spacing: 1.5px; font-size: 1.25rem; width: 240px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; color: #FFF; padding: 0.5rem 1rem; text-decoration: none; margin: 2.5rem auto 0 auto; display: block;}
+	form label.error{ color: #678946; text-align: left; float: none; display: block; font-size: 1.1rem; letter-spacing: 1px; margin: 0 0 1rem 0;}
+	
+	.content h1{ font-size: 1.6rem; font-weight: 300; text-transform: uppercase; letter-spacing: 1px; margin: 1rem auto;}
+	.registro .fb_registry {width: 70%; margin-bottom: 0;}
+	.registro .form { margin-bottom: 2.8rem;}
+
+	.login .form p {font-size: 14px; color: #d8d8d8; margin-bottom: 1.5rem;}
