--- a/www/views/lobby.hbs
+++ b/www/views/lobby.hbs
@@ -8,173 +8,14 @@
 
 
 		</div><!-- content -->
-		<div class="menu clearfix">
-			<ul>
-				<li class="menu_lobby selected"><a href=""></a></li>
-				<li class="menu_quinielas"><a href="#"></a></li>
-				<li class="menu_privadas"><a href="#"></a></li>
-				<li class="menu_perfil"><a href="#"></a></li>
-				<li class="menu_abonar"><a href="#"></a></li>
-			</ul>
-		</div><!-- menu -->
+		{{> footer}}
 	</div><!-- container -->
 	
 	{{> filters}}
 
-	<div class="misquinielas overlay">
-		
-			<div class="quiniela quiniela_open soccer natural garantizado clearfix">
-				<a class="link_wrapper" href="">
-				<div class="quiniela_header clearfix">
-					<div class="quiniela_iconos clearfix">
-						<img src="{{cordova_full_path}}images/natural.png">
-						<img src="{{cordova_full_path}}images/soccer.png">
-					</div><!-- iconos -->
-					<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
-				</div><!-- quiniela_header -->
-				<div class="quiniela_content clearfix">
-					<div class="quiniela_info clearfix">
-						<span class="registros">REG: 1,234</span>
-						<span class="cierre">CIERRE: 28.feb.2017</span>
-						<span class="limite">Limitado a 1000 entradas</span>
-					</div><!-- quiniela_info -->
-					<div class="quiniela_entrada clearfix">
-						<span class="titulo">ENTRADA</span>
-						<img src="{{cordova_full_path}}images/billecoin.png">
-						<span class="number">$1,234</span>
-					</div>
-					<div class="quiniela_bolsa clearfix">
-						<span class="titulo">BOLSA</span>
-						<img src="{{cordova_full_path}}images/garantizado.png">
-						<span class="number guarantee">$5,678</span>
-					</div>
-				</div><!-- quiniela_content -->
-				</a><!-- link_wrapper -->				
-			</div><!-- quiniela -->
-		
-
-		
-			<div class="quiniela quiniela_open nfl linea garantizado clearfix">
-				<a class="link_wrapper" href="">
-				<div class="quiniela_header clearfix">
-					<div class="quiniela_iconos clearfix">
-						<img src="{{cordova_full_path}}images/linea.png">
-						<img src="{{cordova_full_path}}images/nfl.png">
-					</div><!-- iconos -->
-					<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
-				</div><!-- quiniela_header -->
-				<div class="quiniela_content clearfix">
-					<div class="quiniela_info clearfix">
-						<span class="registros">REG: 1,234</span>
-						<span class="cierre">CIERRE: 28.feb.2017</span>
-						<span class="limite">Limitado a 1000 entradas</span>
-					</div><!-- quiniela_info -->
-					<div class="quiniela_entrada clearfix">
-						<span class="titulo">ENTRADA</span>
-						<img src="{{cordova_full_path}}images/billecoin.png">
-						<span class="number">$1,234</span>
-					</div>
-					<div class="quiniela_bolsa clearfix">
-						<span class="titulo">BOLSA</span>
-						<img src="{{cordova_full_path}}images/garantizado.png">
-						<span class="number guarantee">$5,678</span>
-					</div>
-				</div><!-- quiniela_content -->
-				</a><!-- link_wrapper -->				
-			</div><!-- quiniela -->
-		
-
-		
-			<div class="quiniela quiniela_live nfl linea garantizado clearfix">
-				<a class="link_wrapper" href="">
-				<div class="quiniela_header clearfix">
-					<div class="quiniela_iconos clearfix">
-						<img src="{{cordova_full_path}}images/linea.png">
-						<img src="{{cordova_full_path}}images/nfl.png">
-					</div><!-- iconos -->
-					<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
-				</div><!-- quiniela_header -->
-				<div class="quiniela_content clearfix">
-					<div class="quiniela_info clearfix">
-						<span class="registros">REG: 1,234</span>
-						<span class="cierre">CIERRE: 28.feb.2017</span>
-						<span class="limite">Limitado a 1000 entradas</span>
-					</div><!-- quiniela_info -->
-					<div class="quiniela_entrada clearfix">
-						<span class="titulo">ENTRADA</span>
-						<img src="{{cordova_full_path}}images/billecoin.png">
-						<span class="number">$1,234</span>
-					</div>
-					<div class="quiniela_bolsa clearfix">
-						<span class="titulo">BOLSA</span>
-						<img src="{{cordova_full_path}}images/garantizado.png">
-						<span class="number guarantee">$5,678</span>
-					</div>
-				</div><!-- quiniela_content -->
-				</a><!-- link_wrapper -->				
-			</div><!-- quiniela -->
-		
-
-		
-			<div class="quiniela quiniela_closed nfl linea garantizado clearfix">
-				<a class="link_wrapper" href="">
-				<div class="quiniela_header clearfix">
-					<div class="quiniela_iconos clearfix">
-						<img src="{{cordova_full_path}}images/linea.png">
-						<img src="{{cordova_full_path}}images/nfl.png">
-					</div><!-- iconos -->
-					<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
-				</div><!-- quiniela_header -->
-				<div class="quiniela_content clearfix">
-					<div class="quiniela_info clearfix">
-						<span class="registros">REG: 1,234</span>
-						<span class="cierre">CIERRE: 28.feb.2017</span>
-						<span class="limite">Limitado a 1000 entradas</span>
-					</div><!-- quiniela_info -->
-					<div class="quiniela_entrada clearfix">
-						<span class="titulo">ENTRADA</span>
-						<img src="{{cordova_full_path}}images/billecoin.png">
-						<span class="number">$1,234</span>
-					</div>
-					<div class="quiniela_bolsa clearfix">
-						<span class="titulo">BOLSA</span>
-						<img src="{{cordova_full_path}}images/garantizado.png">
-						<span class="number guarantee">$5,678</span>
-					</div>
-				</div><!-- quiniela_content -->
-				</a><!-- link_wrapper -->				
-			</div><!-- quiniela -->
-		
-
-		
-			<div class="quiniela quiniela_otra nfl linea garantizado clearfix">
-				<a class="link_wrapper" href="">
-				<div class="quiniela_header clearfix">
-					<div class="quiniela_iconos clearfix">
-						<img src="{{cordova_full_path}}images/linea.png">
-						<img src="{{cordova_full_path}}images/nfl.png">
-					</div><!-- iconos -->
-					<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
-				</div><!-- quiniela_header -->
-				<div class="quiniela_content clearfix">
-					<div class="quiniela_info clearfix">
-						<span class="registros">REG: 1,234</span>
-						<span class="cierre">CIERRE: 28.feb.2017</span>
-						<span class="limite">Limitado a 1000 entradas</span>
-					</div><!-- quiniela_info -->
-					<div class="quiniela_entrada clearfix">
-						<span class="titulo">ENTRADA</span>
-						<img src="{{cordova_full_path}}images/billecoin.png">
-						<span class="number">$1,234</span>
-					</div>
-					<div class="quiniela_bolsa clearfix">
-						<span class="titulo">BOLSA</span>
-						<img src="{{cordova_full_path}}images/garantizado.png">
-						<span class="number guarantee">$5,678</span>
-					</div>
-				</div><!-- quiniela_content -->
-				</a><!-- link_wrapper -->				
-			</div><!-- quiniela -->
-		
+	<div id="misQuinielas" class="misquinielas overlay">
+		{{# mine.pools}}
+			{{> each-my-quiniela}}
+		{{/ mine.pools}}
 
 	</div><!-- misquinielas overlay -->
