--- a/www/views/partials/each-quiniela.hbs
+++ b/www/views/partials/each-quiniela.hbs
@@ -3,14 +3,16 @@
 						{{# upcoming}}quiniela_open{{/ upcoming}} 
 						{{# live}}quiniela_live{{/ live}} 
 						{{# closed}}quiniela_closed{{/ closed}} 
-						soccer natural garantizado clearfix">
+						soccer 
+						{{point_format}}
+						 garantizado clearfix">
 			<div class="quiniela_header clearfix">
 				<div class="quiniela_iconos clearfix">
 					{{# if_eq point_format "line" }}
-						<img src="{{cordova_full_path}}images/natural.png">
+						<img src="{{cordova_full_path}}images/linea.png">
 					{{/ if_eq }}
 					{{# if_eq point_format "natural" }}
-						<img src="{{cordova_full_path}}images/linea.png">
+						<img src="{{cordova_full_path}}images/natural.png">
 					{{/ if_eq }}
 					<img src="{{cordova_full_path}}images/{{sport.icon}}.png">
 				</div><!-- iconos -->
@@ -19,7 +21,7 @@
 			<div class="quiniela_content clearfix">
 				<div class="quiniela_info clearfix">
 					<span class="registros">REG: {{entry_count}}</span>
-						<span class="cierre">CIERRE: {{formatDate deadline_tz}}</span>
+					<span class="cierre">CIERRE: {{formatDate deadline_tz}}</span>
 					{{!-- <span class="aciertos">ACIERTOS: 3/15</span> --}}
 				</div><!-- quiniela_info -->
 				<div class="quiniela_picks_ok clearfix">
@@ -38,15 +40,11 @@
 				</div>
 				<div class="quiniela_aganar clearfix">
 					<span class="titulo">BOLSA</span>
+					{{# if guaranteed_prize}}
+						<img src="{{cordova_full_path}}images/garantizado.png">
+					{{/ if }}
 					<span class="number">${{ formatCurrency available}}</span>
 				</div>
-				{{# guaranteed_prize}}
-					<div class="quiniela_bolsa clearfix">
-						<span class="titulo">GARANTIZADO</span>
-						<img src="{{cordova_full_path}}images/garantizado.png">
-						<span class="number guarantee">${{ formatCurrency guaranteed_prize}}</span>
-					</div>
-				{{/ guaranteed_prize}}
 			</div><!-- quiniela_content -->
 		</div><!-- quiniela -->
 	</a><!-- link_wrapper -->
