--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -1,18 +1,18 @@
 
 	<div class="container clearfix">
 		{{> header}}
-		{{# data}}
-		<div class="content quiniela_single">
+		<div class="content quiniela_single clearfix">
 			<div class="registro_quiniela clearfix">
 				<a class="hook" data-resource="lobby" href="lobby.html"><img src="{{cordova_full_path}}images/cierre.png"></a>
 				<a href=""><img src="{{cordova_full_path}}images/registrarse.png"></a>
 			</div><!-- opciones registro -->
 			<a class="link_wrapper" href="">
-				<div class="quiniela 
-						{{# if upcoming}}quiniela_open{{/ if}} 
-						{{# if live}}quiniela_live{{/ if}} 
-						{{# if_eq status 'live'}}quiniela_live{{/ if_eq}} 
-						{{# if closed}}quiniela_closed{{/ if}} {{sport.name}} natural garantizado clearfix">
+				<div class="quiniela
+				{{# if upcoming}}quiniela_open{{/ if}} 
+				{{# if live}}quiniela_live{{/ if}} 
+				{{# if_eq status 'live'}}quiniela_live{{/ if_eq}} 
+				{{# if closed}}quiniela_closed{{/ if}} {{sport.name}}
+				{{# if_eq point_format "natural" }} natural {{/ if_eq }} garantizado clearfix">
 					<div class="quiniela_header clearfix">
 						<div class="quiniela_iconos clearfix">
 							{{# if_eq point_format "line" }}
@@ -26,6 +26,7 @@
 						<h2>{{name_replaced}}</h2>
 					</div><!-- quiniela_header -->
 					<div class="quiniela_content clearfix">
+
 						<div class="quiniela_info clearfix">
 							<span class="registros">REG: {{entry_count}}</span>
 							<span class="cierre">CIERRE: {{formatDate deadline_tz}}</span>
@@ -33,7 +34,6 @@
 								<span class="limite">Limitado a {{max_entries}} entradas</span>
 							{{/ limited_capacity}}
 						</div><!-- quiniela_info -->
-						
 						<div class="quiniela_entrada clearfix">
 							<span class="titulo">ENTRADA</span>
 							{{# if_eq entry_currency 'real' }}
@@ -57,10 +57,12 @@
 
 			<div class="quinielas_dropdowns clearfix">
 				
-					<a class="hook" data-respurce="copy-picks" href="">Copiar picks</a>
-					<a href="">Registros</a>
-			</div><!-- dropdowns -->
+					<a href="">Copiar picks</a>
 
+				
+					<a href="">Registros</a>
+			
+			</div><!-- dropdowns -->
 			<div class="partidos clearfix">
 				<h3>PARTIDOS</h3>
 				<div class="opciones_partido clearfix">
@@ -241,10 +243,72 @@
 						</div><!-- desempate_input -->
 					</div><!-- desempate_tres -->
 			</div><!-- dempates -->
+			<div class="quiniela_registro_overlay content clearfix">
+				<div class="quiniela_registro clearfix">
+					<div class="quiniela_header clearfix">
+						<div class="quiniela_iconos clearfix">
+							<img src="{{cordova_full_path}}images/natural.png">
+							<img src="{{cordova_full_path}}images/soccer.png">
+						</div><!-- iconos -->
+						<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
+					</div><!-- quiniela_header -->
+					<div class="no_registros clearfix">
+						<span class="pregunta">¿Cuántos registros quieres para esta quiniela?</span>
+						<select name="no_registros">
+							<option>1</option>
+							<option>2</option>
+							<option>3</option>
+							<option>4</option>
+						</select>
+					</div><!-- no_registros -->
+					<div class="copiar_picks clearfix">
+						<span class="pregunta">Utilizar los picks elegidos para todos los registros</span>
+						<input type="checkbox">
+					</div><!-- no_registros -->
+					<div class="balance clearfix">
+						<div class="disponible clearfix">
+							<p>Balance disponible:</p>
+							<div class="disponible_dinero clearfix">
+								<img src="{{cordova_full_path}}images/billete.png">
+								<p>$1,234 MXN</p>
+							</div><!-- disponible dinero -->
+							<div class="disponible_coins">
+								<img src="{{cordova_full_path}}images/pickcoin.png">
+								<p>1,234</p>
+							</div><!-- disponible coins -->
+						</div><!-- disponible -->
+						<div class="descontaran clearfix">
+							<p>Se descontarán:</p>
+							<div class="descontaran_dinero">
+								<img src="{{cordova_full_path}}images/billete.png">
+								<p>$11 MXN</p>
+							</div><!-- descontaran dinero -->
+							<div class="descontaran_coins">
+								<img src="{{cordova_full_path}}images/pickcoin.png">
+								<p>0</p>
+							</div><!-- descontaran coins -->
+						</div><!-- descontaran -->
+						<div class="total clearfix">
+							<p>Entrada:</p>
+							<div class="total_dinero">
+								<img src="{{cordova_full_path}}images/billete.png">
+								<p>$11 MXN + $0 comisión</p>
+							</div><!-- total dinero -->
+							<div class="total_coins">
+								<img src="{{cordova_full_path}}images/pickcoin.png">
+								<p>0 + 0 comisión</p>
+							</div><!-- total coins -->
+						</div><!-- total -->
+					</div><!-- balance -->
 
+					<div class="botones clarfix">
+						<a><img src="{{cordova_full_path}}images/regresar.png"></a>
+						<input type="submit">
+					</div>
+				</div><!-- quiniela-registro -->
+
+			</div><!-- quiniela_registro_overlay -->
 		</div><!-- content -->
-		{{/ data}}
 		{{> footer}}
 	</div><!-- container -->
-		
 	{{> filters}}
