--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -8,48 +8,48 @@
 			</div><!-- opciones registro -->
 			<a class="link_wrapper" href="">
 				<div class="quiniela
-				{{# if upcoming}}quiniela_open{{/ if}} 
-				{{# if live}}quiniela_live{{/ if}} 
-				{{# if_eq status 'live'}}quiniela_live{{/ if_eq}} 
-				{{# if closed}}quiniela_closed{{/ if}} {{sport.name}}
-				{{# if_eq point_format "natural" }} natural {{/ if_eq }} garantizado clearfix">
+				{{# if data.upcoming}}quiniela_open{{/ if}} 
+				{{# if data.live}}quiniela_live{{/ if}} 
+				{{# if_eq data.status 'live'}}quiniela_live{{/ if_eq}} 
+				{{# if data.closed}}quiniela_closed{{/ if}} {{data.sport.name}}
+				{{# if_eq data.point_format "natural" }} natural {{/ if_eq }} garantizado clearfix">
 					<div class="quiniela_header clearfix">
 						<div class="quiniela_iconos clearfix">
-							{{# if_eq point_format "line" }}
+							{{# if_eq data.point_format "line" }}
 								<img src="{{cordova_full_path}}images/linea.png">
 							{{/ if_eq }}
-							{{# if_eq point_format "natural" }}
+							{{# if_eq data.point_format "natural" }}
 								<img src="{{cordova_full_path}}images/natural.png">
 							{{/ if_eq }}
-							<img src="{{cordova_full_path}}images/{{sport.icon}}.png">
+							<img src="{{cordova_full_path}}images/{{data.sport.icon}}.png">
 						</div><!-- iconos -->
 						<h2>{{name_replaced}}</h2>
 					</div><!-- quiniela_header -->
 					<div class="quiniela_content clearfix">
 
 						<div class="quiniela_info clearfix">
-							<span class="registros">REG: {{entry_count}}</span>
-							<span class="cierre">CIERRE: {{formatDate deadline_tz}}</span>
-							{{# limited_capacity}}
-								<span class="limite">Limitado a {{max_entries}} entradas</span>
-							{{/ limited_capacity}}
+							<span class="registros">REG: {{data.entry_count}}</span>
+							<span class="cierre">CIERRE: {{formatDate data.deadline_tz}}</span>
+							{{# data.limited_capacity}}
+								<span class="limite">Limitado a {{data.max_entries}} entradas</span>
+							{{/ data.limited_capacity}}
 						</div><!-- quiniela_info -->
 						<div class="quiniela_entrada clearfix">
 							<span class="titulo">ENTRADA</span>
-							{{# if_eq entry_currency 'real' }}
+							{{# if_eq data.entry_currency 'real' }}
 								<img src="{{cordova_full_path}}images/billecoin.png">
 							{{/ if_eq }}
-							{{# if_eq entry_currency 'pickcoin' }}
+							{{# if_eq data.entry_currency 'pickcoin' }}
 								<img src="{{cordova_full_path}}images/pickcoin.png">
 							{{/ if_eq }}
-							<span class="number">${{ formatCurrency entry_fee}}</span>
+							<span class="number">${{ formatCurrency data.entry_fee}}</span>
 						</div>
 						<div class="quiniela_bolsa clearfix">
 							<span class="titulo">BOLSA</span>
-							{{# if guaranteed_prize}}
+							{{# if data.guaranteed_prize}}
 								<img src="{{cordova_full_path}}images/garantizado.png">
 							{{/ if }}
-							<span class="number">${{ formatCurrency available}}</span>
+							<span class="number">${{ formatCurrency data.available}}</span>
 						</div>
 					</div><!-- quiniela_content -->
 				</div><!-- quiniela -->
