--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -65,7 +65,7 @@ h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
 /*** GENERAL ***/
 
 body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!important; }
-.container {width: 100%;  padding: 0; position: relative; font-weight: 300; font-family: 'Lato'!important;}
+.container {width: 100%;  padding: 0; position: relative; font-weight: 300; font-family: 'Lato'!important; background-image: url('images/background.png'); background-position: center; }
 .content {width: 100%; padding: 0 3%; }
 
 .splash_logo {width: 100%;}
@@ -413,4 +413,17 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .tab_marcadores .marcador {width: 50%; float: left; border-right: 1px solid #fff; padding: 5px; border-bottom: 1px solid #fff;}
 .tab_marcadores .marcador:nth-child(2n) {border-right: none;}
 .tab_marcadores table {text-align: right; font-size: 10px;}
+
+/*** QUINIELAS PRIVADAS ***/
+
+.quiniela_privada_uno {}
+.quiniela_privada_uno .busqueda_quinielas {padding-top: 110px; width: 100%;}
+.quiniela_privada_uno .botones {width: 100%; margin-bottom: 20px;}
+.quiniela_privada_uno .botones a {display: block; width: 50%; float: left; border:1px solid #414042; text-align: center;  padding-top: 10px; padding-bottom: 10px; font-size: 12px; text-decoration: none; color: #fff; background: #000; border-radius: 3px;}
+.quiniela_privada_uno .botones a.selected {background: #598D16;}
+.quiniela_privada_uno form {width: 100%; padding: 5%; background: #000;}
+.quiniela_privada_uno form input[type="text"] {width: 100%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
+.quiniela_privada_uno form input::placeholder {color: #fff;}
+.quiniela_privada_uno form .submit_holder {width: 80px; height: 36px; margin: 10px auto;}
+.quiniela_privada_uno form input[type="submit"] {width: 80px; height: 36px; background: url('images/buscar.png') no-repeat; border: none!important; text-indent: -100000px; text-align: center;}
 
