--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -362,7 +362,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 /*** QUINIELA REGISTRADA ***/
 
-.quiniela_registrada_single {padding-top: 100px; padding-bottom: 70px; font-size: 12px; position: relative; width: 99%; }
+.quiniela_registrada_single {padding-top: 100px; padding-bottom: 70px; font-size: 12px; position: relative; width: 99%; background: #000;}
 .quiniela_registrada_single .quiniela {width: 100%;}
 .quiniela_registrada_single .quiniela_live {border-left: 3px solid #F6A623;}
 .quiniela_registrada_single .registro_quiniela {width: 100%; text-align: center;}
@@ -374,7 +374,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .tabs_quiniela ul li {display: block; width: 100px; display: table-cell; white-space: nowrap; text-align: center; border-right: 1px solid #414042; height: 22px; padding-top: 3px;}
 .tabs_quiniela ul li:last-child {border-right: 0px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; }
 .tabs_quiniela ul li:first-child {border-top-left-radius: 3px; border-bottom-left-radius: 3px; }
-.tabs_quiniela ul li.selected {background: #77BC1F;}
+.tabs_quiniela ul li.selected {background: #598D16;}
 .tabs_quiniela ul li a {text-decoration: none; color: #fff;}
 
 .tab_posiciones {width: 100%;}
@@ -496,5 +496,34 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 .quiniela_privada_creada .participantes {background: #000;}
 
+/*** PROFILE ***/
 
+.profile {width: 100%; padding-top: 100px; font-size: 10px;}
+.tabs_quiniela {width: 100%; background: #000; margin-top: 20px; margin-bottom: 10px; border-radius: 3px; border: 1px solid #414042; }
+.tabs_quiniela ul {list-style: none; margin: 0; padding: 0px;}
+.tabs_quiniela ul li {display: block; width: 100px; display: table-cell; white-space: nowrap; text-align: center; border-right: 1px solid #414042; height: 22px; padding: 10px 0;}
+.tabs_quiniela ul li:last-child {border-right: 0px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; }
+.tabs_quiniela ul li:first-child {border-top-left-radius: 3px; border-bottom-left-radius: 3px; }
+.tabs_quiniela ul li.selected {background: #598D16;}
+.tabs_quiniela ul li a {text-decoration: none; color: #fff;}
 
+.profile .tab_profile {width: 100%; background: #000; padding: 10px; text-align: center;}
+.profile .tab_profile ul {margin: 20px 0 20px 0; padding: 0px; list-style: none;}
+.profile .tab_profile ul li {display: block; margin-bottom: 10px; width: 100%;}
+.profile .tab_profile ul li input {float: left; margin-right: 10px;}
+.profile .tab_profile ul li img {float: left;}
+.profile .tab_profile ul li span.terminacion {font-size: 12px; display: block; padding: 10px; float: left; }
+.profile .tab_profile ul li .edit_tarjeta {float: right;}
+.profile .tab_profile ul li .edit_tarjeta img {float: left; margin-left: 10px;}
+.profile .tab_profile .agregar_tarjeta {text-align: center;}
+
+.profile .agregartarjeta {width: 100%; background: #000; margin-top: 10px;}
+.profile .agregartarjeta h3 {width: 100%; font-weight: normal; padding: 10px 0; text-align: center; border-top: 1px solid #77BC1F; margin-top: 0px;}
+.profile .agregartarjeta form {width: 100%; padding: 5px; background: #000; padding-bottom: 20%;}
+.profile .agregartarjeta form p {text-align: center; columns: #fff; font-size: 10px; margin-bottom: 20px; padding: 0 10%; line-height: 15px;}
+.profile .agregartarjeta form input[type="text"] {width: 100%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
+.profile .agregartarjeta form input::placeholder {color: #fff;}
+.profile .agregartarjeta form .submit_holder {width: 80px; height: 36px; margin: 10px auto;}
+.profile .agregartarjeta form input[type="submit"] {width: 92px; height: 36px; background: url('images/guardar.png') no-repeat; border: none!important; text-indent: -100000px; text-align: center;}
+.profile .agregartarjeta form .fecha_vencimiento select {width: 20%; float: left; margin-right: 10px; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
+.profile .agregartarjeta form .fecha_vencimiento input[type="text"] {width: 30%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
